--- a/Action/Admin/Tpl/default/Sync/script.html
+++ b/Action/Admin/Tpl/default/Sync/script.html
@@ -5,7 +5,7 @@
 			<div class="edit-item">
 				<div class="lefter">选择服务器</div>
 				<div class="righter server_ids">
-					<input type="checkbox" class="server_list" id="checkAll" value="0" checked/> <font>全选</font>
+					<input type="checkbox" id="checkAll" value="0" checked/> <font>全选</font>
 					<ul style="overflow: hidden;">
 						{foreach $server_list as $v}
 						<li style="width: 150px; float: left">
